--- a/SharePoint-CSOM/buzz365/resources/css/custom.css
+++ b/SharePoint-CSOM/buzz365/resources/css/custom.css
@@ -26,6 +26,8 @@ body#no-bg {
 	background: none;
 }
 
+.PlaceHolderPageImage {
+}
 .container {
 	max-width: 1200px;
 	margin: auto;
@@ -190,9 +192,9 @@ RB Header
 ========================================================================== */
 
 header {
-	margin: 0px auto 25px auto;
-	max-width: 1200px;
-	padding: 15px 0px 0px 0px;
+	margin: 0 10px 15px 10px;
+	padding: 10px 0 0;
+	/*max-width: 1200px;*/
 }
 
 header ul,
@@ -206,6 +208,11 @@ header .icons {
 header ul li {
 	display: inline-block;
 	float: left;
+	transition: all 250ms;
+}
+header ul li:hover {
+	opacity: 0.5;
+	transition: all 250ms;
 }
 
 header .social ul {
@@ -222,12 +229,14 @@ header .social img {
 }
 
 header ul li .search {
+	border: 1px solid #ccc;
+	border-radius: 5px;
+	color: #ccc;
+	margin-left: 10px;
+	min-height: 34px;
 	min-width: 200px;
 	padding: 8px 5px 5px 8px;
-	margin-left: 10px;
 	text-align: left;
-	color: #CCC;
-	border: 1px solid #CCC;
 }
 
 header ul li i {
@@ -555,9 +564,8 @@ Main Menu
 ========================================================================== */
 
 section#main-menu {
-	margin: 0px auto 20px auto;
-	max-width: 1200px;
-
+	margin: 0 10px 10px;
+/*	max-width: 1200px;*/
 }
 
 /* ==========================================================================
@@ -1533,5 +1541,27 @@ input.ms-cui-cb-input {
 	font-family: sans-serif;
 }
 /* ==========================================================================
- Phil Harding's css
+ Office365/SharePoint Override CSS
  ========================================================================== */
+#titleAreaBox {
+	margin: auto 10px;
+}
+#contentRow {
+	padding: 0 10px 8px;
+}
+#s4-titlerow {
+	margin-bottom: 0;
+	margin-top: 0;
+	padding-bottom: 8px;
+	padding-top: 0;
+}
+.ms-core-pageTitle {
+	font-size: 2.7em;
+}
+.ms-core-pageTitle, 
+.ms-core-pageTitle a {
+	color: #415A53;
+	font-family: "Segoe UI Light","Segoe UI","Segoe",Tahoma,Helvetica,Arial,sans-serif;
+}
+
+
