--- a/SharePoint-CSOM/news2/resources/css/news.css
+++ b/SharePoint-CSOM/news2/resources/css/news.css
@@ -60,6 +60,9 @@
 .news-newarticle-container {
      margin: 10px 5px 0 0;
 }
+.buzz365-responsive-v1 .news-newarticle-container {
+    margin: 5px 5px 0 0;
+}
 .add-a-new-post .ms-textXLarge {
     font-size: 1.26em;
 }
@@ -321,7 +324,7 @@
 
 
 /* CATEGORY TAG CLOUD */
-.news-post-category-cloud { margin: 10px 10px 0 0; }
+.news-post-category-cloud { margin: 0 10px 0 0; }
 .news-post-category-cloud ul { margin: 0; padding: 0; display: none; }
 .news-post-category-cloud li { margin:0; padding: 2px 0; list-style: none; font-family: "Segoe UI Semilight","Segoe UI","Segoe",Tahoma,Helvetica,Arial,sans-serif; }
 
