--- a/SharePoint-CSOM/buzz365/resources/Buzz365-responsive-v1.master
+++ b/SharePoint-CSOM/buzz365/resources/Buzz365-responsive-v1.master
@@ -40,12 +40,14 @@
     <SharePoint:CssRegistration name="<% $SPUrl:~siteCollection/_catalogs/masterpage/Buzz365/css/jquery.sidr.dark.css%>" After="corev15.css" runat="server" />
     <SharePoint:CssRegistration name="<% $SPUrl:~siteCollection/_catalogs/masterpage/Buzz365/css/grids-responsive-min.css%>" After="corev15.css" runat="server" />
     <SharePoint:CssRegistration name="<% $SPUrl:~siteCollection/_catalogs/masterpage/Buzz365/css/custom.css%>" After="corev15.css" runat="server" />
-    <SharePoint:CssRegistration name="<% $SPUrl:~siteCollection/_catalogs/masterpage/Buzz365/css/fonts.css%>" After="corev15.css" runat="server" />
+    <SharePoint:CssRegistration name="<% $SPUrl:~siteCollection/_catalogs/masterpage/Buzz365/css/font-awesome.min.css%>" After="corev15.css" runat="server" />
 
     <SharePoint:ScriptLink runat="server" language="javascript" LoadAfterUI="false" Defer="false" 
                            Name="~sitecollection/_catalogs/masterpage/Buzz365/js/jquery-2.1.1.min.js" />
     <SharePoint:ScriptLink runat="server" language="javascript" LoadAfterUI="false" Defer="false" 
                            Name="~sitecollection/_catalogs/masterpage/Buzz365/js/jquery.sidr.min.js" />
+    <SharePoint:ScriptLink runat="server" language="javascript" LoadAfterUI="true" Defer="false" 
+                           Name="~sitecollection/_catalogs/masterpage/Buzz365/js/megamenu.js" />
     <SharePoint:ScriptLink runat="server" language="javascript" LoadAfterUI="true" Defer="false" 
                            Name="~sitecollection/_catalogs/masterpage/Buzz365/js/site.js" />
 </head>
@@ -468,73 +470,96 @@
 
 <!-- START BUZZ HEADER -->
 <header>
-  <a id="mobile-nav" href="#mobile-nav">
-        <img src='<asp:Literal Text="<% $SPUrl:~siteCollection/_catalogs/masterpage/Buzz365/images/mob-nav.png%>" runat="server" />' alt="" />
+  <a id="mobile-nav" href="#mobile-nav" class='mobile-button'>
+    <i class="fa fa-bars fa-2x"></i>
+  </a>
+  <a id="mobile-search" href="#mobile-search" class='mobile-button'>
+    <i class="fa fa-search fa-2x"></i>
   </a>
   <div class="pure-g" height="76">
-      <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-2 social">
-         <SharePoint:SPSimpleSiteLink CssClass="SPSimpleSiteLink" runat="server" id="onetidProjectPropertyTitleGraphic">
+      <div class="pure-u-2-3 social">
+          <SharePoint:SPSimpleSiteLink CssClass="SPSimpleSiteLink" runat="server" id="onetidProjectPropertyTitleGraphic">
             <img class="pure-img logo" src='<asp:Literal Text="<% $SPUrl:~siteCollection/_catalogs/masterpage/Buzz365/images/rb-the-buzz.png%>" runat="server" />' alt="RB - The Buzz" />
-         </SharePoint:SPSimpleSiteLink>
+          </SharePoint:SPSimpleSiteLink>
           <ul>
-              <li>
+              <li class='badge'>
                   <a href="http://www.facebook.com/discoverRB">
-                      <i class="flaticon-facebook44">
-                      </i>
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                    </span>
                   </a>
               </li>
-              <li>
+              <li class='badge'>
                   <a href="http://twitter.com/discoverRB">
-                      <i class="flaticon-social71">
-                      </i>
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                    </span>
                   </a>
               </li>
-              <li>
+              <li class='badge'>
                   <a href="http://www.linkedin.com/company/discoverRB">
-                      <i class="flaticon-linkedin21">
-                      </i>
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                    </span>
                   </a>
               </li>
-              <li>
+              <li class='badge'>
                   <a href="http://www.youtube.com/user/RBworldwide">
-                      <i class="flaticon-social18">
-                      </i>
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-youtube fa-stack-1x fa-inverse"></i>
+                    </span>
                   </a>
               </li>
-              <li>
+              <li class='badge'>
                   <a href="http://weibo.com/">
-                      <i class="flaticon-weibo3">
-                      </i>
+                    <span class="fa-stack fa-lg">
+                      <i class="fa fa-circle fa-stack-2x"></i>
+                      <i class="fa fa-weibo fa-stack-1x fa-inverse"></i>
+                    </span>
                   </a>
               </li>
           </ul>
-      </div>
-      <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-2">
-          <div class="pure-g">
-              <div class="pure-u-1">
-                  <ul>
-                      <li>
-                        <img class="icons" src='<asp:Literal Text="<% $SPUrl:~siteCollection/_catalogs/masterpage/Buzz365/images/icons.png%>" runat="server" />' alt="" />
-                      </li>
-                      <li>
-                          <div class="search">
-                              <!-- Search Box Start -->
-                                        <SharePoint:AjaxDelta id="DeltaPlaceHolderSearchArea" BlockElement="true" CssClass="ms-mpSearchBox ms-floatRight" runat="server">
-                                            <asp:ContentPlaceHolder id="PlaceHolderSearchArea" runat="server">
-                                                <div id="searchInputBox">
-                                                  <SharePoint:DelegateControl runat="server" ControlId="SmallSearchInputBox" />
-                                                </div>
-                                            </asp:ContentPlaceHolder>
-                                        </SharePoint:AjaxDelta>
-                              <!-- Search Box End -->
-                          </div>
-                      </li>
-                  </ul>
-              </div>
+          <div id='mobile-header-search-box' class='mobile-header-search-box'>
+              <!-- Search Box Start -->
+              <SearchWC:SearchBoxScriptWebPart runat="server" id="mobileSearchInputBox" DefaultDropdownNodeId="1001" ServerInitialRender="true" UseSharedSettings="true" ChromeType="none" EmitStyleReference="false" />
+              <!-- Search Box End -->
           </div>
+      </div>
+      <div class="pure-u-1-3 corporate">
+        <ul>
+            <li class='badge'>
+                <a href="#">
+                  <i class="fa fa-institution fa-lg"></i>
+                </a>
+            </li>
+            <li class='badge'>
+                <a href="#">
+                  &nbsp;<i class="fa fa-exclamation-triangle fa-lg"></i>
+                </a>
+            </li>
+        </ul>
+        <div id='header-search-box' class='header-search-box'>
+            <!-- Search Box Start -->
+            <SearchWC:SearchBoxScriptWebPart runat="server" id="searchInputBox" DefaultDropdownNodeId="1001" ServerInitialRender="true" UseSharedSettings="true" ChromeType="none" EmitStyleReference="false" />
+            <!-- Search Box End -->
+        </div>
       </div>
   </div>
 </header>
+
+<div style='display:none!important;'>
+  <SharePoint:AjaxDelta id="DeltaPlaceHolderSearchArea" BlockElement="true" CssClass="ms-mpSearchBox ms-floatRight" runat="server">
+      <asp:ContentPlaceHolder id="PlaceHolderSearchArea" runat="server">
+          <div id="searchInputBox">
+            <SharePoint:DelegateControl runat="server" ControlId="SmallSearchInputBox" />
+          </div>
+      </asp:ContentPlaceHolder>
+  </SharePoint:AjaxDelta>
+</div>
 <!-- END BUZZ HEADER -->
 
 <!-- START MEGA MENU/MEGA-MENU -->
